--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 NODE_ENV=development
-PRERENDER_SERVICE_URL=https://prerenderservice.herokuapp.com
-PRERENDER_SERVICE_URL_DEV=http://localhost:3000
+PRERENDER_SERVICE_URL=https://prerenderservice.herokuapp.com/
+PRERENDER_SERVICE_URL_DEV=http://localhost:3000/
